chore: now frontend connects correctly to backend * also added the dashboard route and protected it with canActivate lib * also added a http error handling using interceptors

--- a/client/src/app/protected/dashboard/dashboard.component.html
+++ b/client/src/app/protected/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<p>Protected Dashboard works.</p>
+
+<a [routerLink]="['../../public/login']">Go back to Login</a>
+<br>
+<a [routerLink]="['../../public/register']">Go back to Register</a>
+<br>
+<br>
